{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "CameraControls",
            "id": "bea650e6-fc4e-4db1-a61c-5b55c8ce82df",
            "actions": [
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "fe00d294-1d19-4856-9c0e-5f24c8d1b55d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "cab23a19-1ac2-4ff2-8a43-6c190c8ec89e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "65c51022-a77d-42f6-b3d3-344775714f5c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScrollDelta",
                    "type": "Value",
                    "id": "74a739dd-fed9-41be-9570-8ab5c8b7659c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MiddleMouse",
                    "type": "Button",
                    "id": "273eed82-2940-4a93-9e8d-bad4d2f34437",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "57d5e460-fcd3-4f19-8047-805c7a990110",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "215f4a46-bcaf-4d7a-bda3-89f688fb92f8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b023caa-35f2-4f3a-a774-740bfc07a123",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScrollDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebd733d8-378f-4c07-bcd9-56d54f7ba5be",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8d4886b-e92f-4cc6-9e78-d4fc6343e364",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}